# ddg-mcp

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
src/ddg_mcp/: server.py
