[project]
name = "ddg-mcp"
version = "0.2.1"
description = "DuckDuckGo search API MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "duckduckgo-search",
  "mcp",
  "beautifulsoup4",
  "lxml",
  "requests",
]

[[project.authors]]
name = "Shannon Sands"
email = "shannon.sands.1979@gmail.com"

[build-system]
requires = [ "hatchling", ]
build-backend = "hatchling.build"

[project.scripts]
ddg-mcp = "ddg_mcp:main"